# SlamPages

./: .gitignore  README.md  docker-compose.yml
Backend/: .dockerignore  Dockerfile  get_refresh_token.py  pyproject.toml  test_email.py
Backend/authentication/: gmail_helper.py  models.py  serializers.py  urls.py  views.py
Backend/authentication/migrations/: 0001_initial.py  0002_password_reset_token.py
Backend/slam/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
Backend/slambooks/: apps.py  models.py  pdf_template.html  serializers.py  tasks.py  urls.py  views.py
Backend/slambooks/migrations/: 0001_initial.py  0002_slamentry_ip_address.py
Backend/slambooks/templates/slambooks/: pdf_template.html
Backend/slambooks/templatetags/: custom_filters.py
Documentation/: backend.md  frontend.md  run.md
