[project]
name = "slam-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nathanmendis",email = "nathanmendis17@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "channels (>=4.3.2,<5.0.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "reportlab (>=4.5.1,<5.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "better-profanity (>=0.7.0,<0.8.0)",
    "google-api-python-client (>=2.100.0,<3.0.0)",
    "google-auth (>=2.22.0,<3.0.0)",
    "google-auth-oauthlib (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
